# Food-4BigTots

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
food4bigtots/: __init__.py  db.py  home.py  recipes.py  schema.sql
food4bigtots/static/css/: styles.css  styles.css.map
food4bigtots/static/js/: interactive.js
food4bigtots/static/scss/: styles.scss
food4bigtots/templates/: base.html  category.html  macros.html  recipe.html  recipe_factory.html
food4bigtots/templates/errors/: 404.html  error.html
food4bigtots/templates/home/: about.html  home.html
food4bigtots/templates/recipes/: category.html  pau.html  recipe-factory-long.html  recipe.html  recipe_factory.html  wholemeal-pau-with-red-bean-filling.html
food4bigtots/templates/recipes/baked-treats/: baked-mini-chocolate-donuts.html  basic-butter-cake.html  blueberry-orange-muffins.html  cranberry-scones.html  double-chocolate-muffins.html  oatmeal-banana-raisin-muffins.html
food4bigtots/templates/recipes/bread/: homemade-pizza.html  simple-breadsticks.html  steamed-pumpkin-muffins.html  wholemeal-milk-buns.html  wholemeal-pau-with-red-bean-filling.html
food4bigtots/templates/recipes/breakfast/: mini-fluffy-pancakes.html  wholemeal-banana-chocolate-chip-pancakes.html  wholemeal-crepes.html
food4bigtots/templates/recipes/cookies/: almond-biscotti.html  almond-cookies.html  cranberry-and-pistachio-biscotti.html  gingerbread-man-cookies.html  homemade-goldfish-crackers.html  homemade-pineapple-tarts.html  simple-breadsticks.html  tamago-boro-egg-biscuits.html
food4bigtots/templates/recipes/dessert/: baked-mini-chocolate-donuts.html  blueberry-orange-muffins.html  cherry-yoghurt-popsicles.html  strawberry-cream-cheese-popsicles.html
food4bigtots/templates/recipes/drinks/: mango-lassi.html
food4bigtots/templates/recipes/snacks/: cauliflower-tots.html  (+2 more)
(+4 files in other folders)
